--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "MabinogiMobileDiscord",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/index.js",
   "repository": "https://github.com/artbiit/MabinogiMobileDiscord",
   "author": "art <artbiit@naver.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=22.14.0",
+    "yarn": ">=1.22.22"
+  },
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0"
